# mediapipe-lite

./: .clang-format  .gitignore  CMakeLists.txt  README.md  README_CN.md  conanfile.py
.github/workflows/: linux-x86-cpu-gcc.yml  macos-x86-cpu-clang.yml  windows-x86-cpu-msvc.yml
cmake/: clang_format.cmake  macros.cmake  mediapipeliteConfig.cmake.in  version.hpp.in
doc/: build_with_msvc.md  build_with_ndk.md
docker/: Dockerfile.x86_u20_gcc9  Dockerfile.x86_u20_ndk  init_zsh.sh  ndk_profile  pip.conf  x86_gcc_profile
examples/: CMakeLists.txt
examples/desktop/: CMakeLists.txt  demo_run_graph_main.cc  image_sequence.cc  image_sequence.h
examples/desktop/hand_tracking/: CMakeLists.txt
examples/desktop/object_detection/: CMakeLists.txt  object_detection_desktop_live.pbtxt  test_opencv.cc
examples/tutorial/: CMakeLists.txt  new_node.cc  run_graph.cc
examples/tutorial/api2/: cpp_graph.cc  new_node.cc
mediapipe/: CMakeLists.txt
mediapipe/calculators/core/: get_vector_item_calculator_test.cc  matrix_subtract_calculator_test.cc  side_packet_to_stream_calculator_test.cc
mediapipe/calculators/tensor/: audio_to_tensor_calculator_test.cc  tensors_dequantization_calculator_test.cc  tensors_to_audio_calculator_test.cc
mediapipe/calculators/util/: detection_transformation_calculator_test.cc
mediapipe/framework/: CMakeLists.txt  calculator_contract.cc  calculator_graph.cc  calculator_graph_event_loop_test.cc  calculator_graph_side_packet_test.cc  calculator_graph_stopping_test.cc  calculator_graph_test.cc  calculator_node.cc  calculator_node_test.cc  graph_service_test.cc  graph_validation_test.cc  legacy_calculator_support.cc  legacy_calculator_support.h  packet.h  scheduler_queue.cc  thread_pool_executor.cc  validated_graph_config.cc
mediapipe/framework/api2/: CMakeLists.txt  node_test.cc
mediapipe/framework/formats/: CMakeLists.txt  image_frame.cc  image_opencv.cc  location.cc  location_opencv.cc  tensor.cc
mediapipe/framework/formats/annotation/: CMakeLists.txt
mediapipe/framework/formats/motion/: CMakeLists.txt  optical_flow_field.cc  optical_flow_field.h
mediapipe/framework/formats/object_detection/: CMakeLists.txt
mediapipe/framework/profiler/: CMakeLists.txt
mediapipe/framework/profiler/reporter/: CMakeLists.txt
mediapipe/framework/stream_handler/: CMakeLists.txt
mediapipe/framework/tool/: CMakeLists.txt  options_util_test.cc  packet_generator_wrapper_calculator.cc  proto_util_lite.cc  source.cc  status_util.cc  subgraph_expansion.cc  subgraph_expansion_test.cc  switch_container.cc  switch_container_test.cc  switch_demux_calculator.cc  switch_mux_calculator.cc  template_expander.cc  template_parser.cc  test_util.cc  validate.cc  validate_type.cc
mediapipe/gpu/: CMakeLists.txt
mediapipe/graphs/object_detection/: object_detection_desktop_live.pbtxt  object_detection_desktop_tflite_graph.pbtxt
mediapipe/python/: CMakeLists.txt  framework_bindings.cc
mediapipe/python/pybind/: image.cc
mediapipe/util/: CMakeLists.txt  cpu_util.cc  time_series_util.cc
test_package/: CMakeLists.txt  conanfile.py  example.cc
